[package]
name = "baker-link-env"
version = "0.1.5"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

serde = { version = "1", features = ["derive"] }
env_logger = "0.11.3"
rfd = "0.14.1"
cargo-generate = "0.23"
anyhow = "1.0.86"
chrono = "0.4.38"
sysinfo = "0.30.13"
open = "5.3.0"
probe-rs-tools = { path = "external/probe-rs/probe-rs-tools" }
tokio = { version = "1", features = ["rt", "time"] }
tokio-util = "0.7"
time = "0.3"


[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "Baker link. Env"
identifier = "baker.link.env"
resources = ["Cargo.toml", "src", "icon/"]
icons = ["icon/icon.ico", "icon/icon.png"]
out-dir="./dist"
license-file = "LICENSE"
